@@ -17,26 +17,29 @@
 package androidx.build
 
 import androidx.benchmark.gradle.BenchmarkPlugin
-import androidx.build.AndroidXImplPlugin.Companion.CHECK_RELEASE_READY_TASK
 import androidx.build.AndroidXImplPlugin.Companion.TASK_TIMEOUT_MINUTES
 import androidx.build.Release.DEFAULT_PUBLISH_CONFIG
-import androidx.build.SupportConfig.BUILD_TOOLS_VERSION
 import androidx.build.SupportConfig.COMPILE_SDK_VERSION
 import androidx.build.SupportConfig.DEFAULT_MIN_SDK_VERSION
 import androidx.build.SupportConfig.INSTRUMENTATION_RUNNER
 import androidx.build.SupportConfig.TARGET_SDK_VERSION
+import androidx.build.buildInfo.addCreateLibraryBuildInfoFileTasks
 import androidx.build.checkapi.JavaApiTaskConfig
 import androidx.build.checkapi.KmpApiTaskConfig
 import androidx.build.checkapi.LibraryApiTaskConfig
 import androidx.build.checkapi.configureProjectForApiTasks
+import androidx.build.dependencies.KOTLIN_VERSION
 import androidx.build.dependencyTracker.AffectedModuleDetector
+import androidx.build.docs.AndroidXKmpDocsImplPlugin
 import androidx.build.gradle.isRoot
 import androidx.build.license.configureExternalDependencyLicenseCheck
 import androidx.build.resources.configurePublicResourcesStub
+import androidx.build.sbom.validateAllArchiveInputsRecognized
 import androidx.build.studio.StudioTask
 import androidx.build.testConfiguration.addAppApkToTestConfigGeneration
 import androidx.build.testConfiguration.addToTestZips
 import androidx.build.testConfiguration.configureTestConfigGeneration
+import com.android.build.api.artifact.SingleArtifact
 import com.android.build.api.dsl.ManagedVirtualDevice
 import com.android.build.api.dsl.TestOptions
 import com.android.build.api.variant.ApplicationAndroidComponentsExtension
@@ -50,50 +53,65 @@ import com.android.build.gradle.LibraryPlugin
 import com.android.build.gradle.TestExtension
 import com.android.build.gradle.TestPlugin
 import com.android.build.gradle.TestedExtension
-import com.android.build.gradle.internal.tasks.AnalyticsRecordingTask
 import com.android.build.gradle.internal.tasks.ListingFileRedirectTask
+import java.io.File
+import java.time.Duration
+import java.util.Locale
+import java.util.concurrent.ConcurrentHashMap
+import javax.inject.Inject
+import org.gradle.api.DefaultTask
 import org.gradle.api.GradleException
+import org.gradle.api.JavaVersion.VERSION_11
+import org.gradle.api.JavaVersion.VERSION_17
 import org.gradle.api.JavaVersion.VERSION_1_8
 import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.api.Task
+import org.gradle.api.component.SoftwareComponentFactory
 import org.gradle.api.file.DuplicatesStrategy
 import org.gradle.api.plugins.JavaPlugin
 import org.gradle.api.plugins.JavaPluginExtension
 import org.gradle.api.tasks.Copy
 import org.gradle.api.tasks.TaskProvider
-import org.gradle.api.tasks.bundling.Jar
 import org.gradle.api.tasks.bundling.Zip
 import org.gradle.api.tasks.compile.JavaCompile
 import org.gradle.api.tasks.javadoc.Javadoc
+import org.gradle.api.tasks.testing.AbstractTestTask
 import org.gradle.api.tasks.testing.Test
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
+import org.gradle.kotlin.dsl.KotlinClosure1
 import org.gradle.kotlin.dsl.create
 import org.gradle.kotlin.dsl.extra
 import org.gradle.kotlin.dsl.findByType
 import org.gradle.kotlin.dsl.getByType
+import org.gradle.kotlin.dsl.register
 import org.jetbrains.kotlin.gradle.dsl.KotlinAndroidProjectExtension
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
 import org.jetbrains.kotlin.gradle.plugin.KotlinBasePluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinMultiplatformPluginWrapper
+import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinNativeTargetWithSimulatorTests
+import org.jetbrains.kotlin.gradle.tasks.CInteropProcess
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import java.io.File
-import java.time.Duration
-import java.util.Locale
-import java.util.concurrent.ConcurrentHashMap
-import org.gradle.kotlin.dsl.KotlinClosure1
-import org.gradle.kotlin.dsl.register
+import org.jetbrains.kotlin.gradle.tasks.KotlinNativeCompile
 
 /**
  * A plugin which enables all of the Gradle customizations for AndroidX.
  * This plugin reacts to other plugins being added and adds required and optional functionality.
  */
-class AndroidXImplPlugin : Plugin<Project> {
+
+class AndroidXImplPlugin @Inject constructor(val componentFactory: SoftwareComponentFactory) :
+    Plugin<Project> {
     override fun apply(project: Project) {
         if (project.isRoot)
             throw Exception("Root project should use AndroidXRootImplPlugin instead")
         val extension = project.extensions.create<AndroidXExtension>(EXTENSION_NAME, project)
+
+        project.extensions.create<AndroidXMultiplatformExtension>(
+            AndroidXMultiplatformExtension.EXTENSION_NAME,
+            project
+        )
+        project.tasks.register(BUILD_ON_SERVER_TASK, DefaultTask::class.java)
         // Perform different actions based on which plugins have been applied to the project.
         // Many of the actions overlap, ex. API tracking.
         project.plugins.all { plugin ->
@@ -107,35 +125,50 @@ class AndroidXImplPlugin : Plugin<Project> {
         }
 
         project.configureKtlint()
+        project.configureKotlinStdlibVersion()
 
         // Configure all Jar-packing tasks for hermetic builds.
-        project.tasks.withType(Jar::class.java).configureEach { it.configureForHermeticBuild() }
+        project.tasks.withType(Zip::class.java).configureEach { it.configureForHermeticBuild() }
         project.tasks.withType(Copy::class.java).configureEach { it.configureForHermeticBuild() }
 
         // copy host side test results to DIST
-        project.tasks.withType(Test::class.java) { task -> configureTestTask(project, task) }
+        project.tasks.withType(AbstractTestTask::class.java) {
+                task -> configureTestTask(project, task)
+        }
+        project.tasks.withType(Test::class.java) {
+                task -> configureJvmTestTask(project, task)
+        }
 
         project.configureTaskTimeouts()
-        project.configureMavenArtifactUpload(extension)
+        project.configureMavenArtifactUpload(extension, componentFactory)
         project.configureExternalDependencyLicenseCheck()
         project.configureProjectStructureValidation(extension)
         project.configureProjectVersionValidation(extension)
         project.registerProjectOrArtifact()
+        project.addCreateLibraryBuildInfoFileTasks(extension)
 
         project.configurations.create("samples")
+        project.validateMultiplatformPluginHasNotBeenApplied()
+
+        project.tasks.register("printCoordinates", PrintProjectCoordinatesTask::class.java) {
+            it.configureWithAndroidXExtension(extension)
+        }
+        project.configureConstraintsWithinGroup(extension)
+        project.validateProjectParser(extension)
+        project.validateAllArchiveInputsRecognized()
     }
 
     private fun Project.registerProjectOrArtifact() {
         // Add a method for each sub project where they can declare an optional
         // dependency on a project or its latest snapshot artifact.
-        if (!StudioType.isPlayground(this)) {
+        if (!ProjectLayoutType.isPlayground(this)) {
             // In AndroidX build, this is always enforced to the project
             extra.set(
                 PROJECT_OR_ARTIFACT_EXT_NAME,
                 KotlinClosure1<String, Project>(
                     function = {
                         // this refers to the first parameter of the closure.
-                        project(this)
+                        project.resolveProject(this)
                     }
                 )
             )
@@ -157,7 +190,7 @@ class AndroidXImplPlugin : Plugin<Project> {
      * Disables timestamps and ensures filesystem-independent archive ordering to maximize
      * cross-machine byte-for-byte reproducibility of artifacts.
      */
-    private fun Jar.configureForHermeticBuild() {
+    private fun Zip.configureForHermeticBuild() {
         isReproducibleFileOrder = true
         isPreserveFileTimestamps = false
     }
@@ -166,14 +199,37 @@ class AndroidXImplPlugin : Plugin<Project> {
         duplicatesStrategy = DuplicatesStrategy.FAIL
     }
 
-    private fun configureTestTask(project: Project, task: Test) {
-        AffectedModuleDetector.configureTaskGuard(task)
-
+    private fun configureJvmTestTask(project: Project, task: Test) {
         // Robolectric 1.7 increased heap size requirements, see b/207169653.
         task.maxHeapSize = "3g"
 
+        // For non-playground setup use robolectric offline
+        if (!ProjectLayoutType.isPlayground(project)) {
+            task.systemProperty("robolectric.offline", "true")
+            val robolectricDependencies =
+                File(
+                    project.getPrebuiltsRoot(),
+                    "androidx/external/org/robolectric/android-all-instrumented"
+                )
+            task.systemProperty(
+                "robolectric.dependency.dir",
+                robolectricDependencies.relativeTo(project.projectDir)
+            )
+        }
+    }
+
+    private fun configureTestTask(project: Project, task: AbstractTestTask) {
+        val ignoreFailuresProperty = project.providers.gradleProperty(
+            TEST_FAILURES_DO_NOT_FAIL_TEST_TASK
+        )
+        val ignoreFailures = ignoreFailuresProperty.isPresent
+        if (ignoreFailures) {
+            task.ignoreFailures = true
+        }
+        task.inputs.property("ignoreFailures", ignoreFailures)
+
         val xmlReportDestDir = project.getHostTestResultDirectory()
-        val archiveName = "${project.path.asFilenamePrefix()}_${task.name}.zip"
+        val archiveName = "${project.path}:${task.name}.zip"
         if (project.isDisplayTestOutput()) {
             // Enable tracing to see results in command line
             task.testLogging.apply {
@@ -198,25 +254,6 @@ class AndroidXImplPlugin : Plugin<Project> {
             val capitalizedTestTaskName = testTaskName.replaceFirstChar {
                 if (it.isLowerCase()) it.titlecase(Locale.getDefault()) else it.toString()
             }
-
-            val zipHtmlTask = project.tasks.register(
-                "zipHtmlResultsOf$capitalizedTestTaskName",
-                Zip::class.java
-            ) {
-                val destinationDirectory = File("$xmlReportDestDir-html")
-                it.destinationDirectory.set(destinationDirectory)
-                it.archiveFileName.set(archiveName)
-                it.from(project.file(task.reports.html.outputLocation))
-                it.doLast { zip ->
-                    // If the test itself didn't display output, then the report task should
-                    // remind the user where to find its output
-                    zip.logger.lifecycle(
-                        "Html results of $testTaskName zipped into " +
-                            "$destinationDirectory/$archiveName"
-                    )
-                }
-            }
-            task.finalizedBy(zipHtmlTask)
             val xmlReport = task.reports.junitXml
             if (xmlReport.required.get()) {
                 val zipXmlTask = project.tasks.register(
@@ -227,26 +264,8 @@ class AndroidXImplPlugin : Plugin<Project> {
                     it.archiveFileName.set(archiveName)
                     it.from(project.file(xmlReport.outputLocation))
                 }
-                val ignoreFailuresProperty = project.providers.gradleProperty(
-                    TEST_FAILURES_DO_NOT_FAIL_TEST_TASK
-                )
-                if (ignoreFailuresProperty.isPresent) {
-                    task.ignoreFailures = true
-                }
                 task.finalizedBy(zipXmlTask)
             }
-        }
-        if (!StudioType.isPlayground(project)) { // For non-playground setup use robolectric offline
-            task.systemProperty("robolectric.offline", "true")
-            val robolectricDependencies =
-                File(
-                    project.getPrebuiltsRoot(),
-                    "androidx/external/org/robolectric/android-all-instrumented"
-                )
-            task.systemProperty(
-                "robolectric.dependency.dir",
-                robolectricDependencies.absolutePath
-            )
         }
     }
 
@@ -255,11 +274,27 @@ class AndroidXImplPlugin : Plugin<Project> {
         extension: AndroidXExtension,
         plugin: KotlinBasePluginWrapper
     ) {
-        project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
-            task.kotlinOptions.jvmTarget = "1.8"
-            project.configureJavaCompilationWarnings(task)
-        }
         project.afterEvaluate {
+            project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
+                if (extension.type == LibraryType.COMPILER_PLUGIN) {
+                    task.kotlinOptions.jvmTarget = "11"
+                } else if (extension.type.compilationTarget == CompilationTarget.HOST &&
+                    extension.type != LibraryType.ANNOTATION_PROCESSOR_UTILS
+                ) {
+                    task.kotlinOptions.jvmTarget = "17"
+                } else {
+                    task.kotlinOptions.jvmTarget = "1.8"
+                }
+                val kotlinCompilerArgs = mutableListOf(
+                    "-Xskip-metadata-version-check",
+                )
+                // TODO (b/259578592): enable -Xjvm-default=all for camera-camera2-pipe projects
+                if (!project.name.contains("camera-camera2-pipe")) {
+                    kotlinCompilerArgs += "-Xjvm-default=all"
+                }
+                task.kotlinOptions.freeCompilerArgs += kotlinCompilerArgs
+            }
+
             val isAndroidProject = project.plugins.hasPlugin(LibraryPlugin::class.java) ||
                 project.plugins.hasPlugin(AppPlugin::class.java)
             // Explicit API mode is broken for Android projects
@@ -268,14 +303,21 @@ class AndroidXImplPlugin : Plugin<Project> {
                 project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
                     // Workaround for https://youtrack.jetbrains.com/issue/KT-37652
                     if (task.name.endsWith("TestKotlin")) return@configureEach
+                    if (task.name.endsWith("TestKotlinJvm")) return@configureEach
                     task.kotlinOptions.freeCompilerArgs += listOf("-Xexplicit-api=strict")
                 }
             }
         }
+        // setup a partial docs artifact that can be used to generate offline docs, if requested.
+        AndroidXKmpDocsImplPlugin.setupPartialDocsArtifact(project)
         if (plugin is KotlinMultiplatformPluginWrapper) {
+            project.configureKonanDirectory()
             project.extensions.findByType<LibraryExtension>()?.apply {
                 configureAndroidLibraryWithMultiplatformPluginOptions()
             }
+            project.configureKmpTests()
+            project.configureSourceJarForMultiplatform()
+            project.configureLintForMultiplatform(extension)
         }
     }
 
@@ -287,9 +329,13 @@ class AndroidXImplPlugin : Plugin<Project> {
         }
 
         project.extensions.getByType<ApplicationAndroidComponentsExtension>().apply {
-            onVariants { it.configureLicensePackaging() }
+            onVariants { it.configureTests() }
             finalizeDsl {
-                project.configureAndroidProjectForLint(it.lint, androidXExtension)
+                project.configureAndroidProjectForLint(
+                    it.lint,
+                    androidXExtension,
+                    isLibrary = false
+                )
             }
         }
     }
@@ -307,6 +353,11 @@ class AndroidXImplPlugin : Plugin<Project> {
         project.addToProjectMap(androidXExtension)
     }
 
+    private fun HasAndroidTest.configureTests() {
+        configureLicensePackaging()
+        excludeVersionFilesFromTestApks()
+    }
+
     private fun HasAndroidTest.configureLicensePackaging() {
         androidTest?.packaging?.resources?.apply {
             // Workaround a limitation in AGP that fails to merge these META-INF license files.
@@ -316,6 +367,30 @@ class AndroidXImplPlugin : Plugin<Project> {
             // are currently dual-licensed with AL2.0 and LGPL2.1. The affected dependencies are:
             //   - net.java.dev.jna:jna:5.5.0
             excludes.add("/META-INF/LGPL2.1")
+        }
+    }
+
+    /**
+     * Excludes files telling which versions of androidx libraries were used in test apks
+     * to avoid invalidating the build cache as often
+     */
+    private fun HasAndroidTest.excludeVersionFilesFromTestApks() {
+        androidTest?.packaging?.resources?.apply {
+            excludes.add("/META-INF/androidx*.version")
+        }
+    }
+
+    fun Project.configureKotlinStdlibVersion() {
+        project.configurations.all { configuration ->
+            configuration.resolutionStrategy { strategy ->
+                strategy.eachDependency { details ->
+                    if (details.requested.group == "org.jetbrains.kotlin" &&
+                        (details.requested.name == "kotlin-stdlib-jdk7" ||
+                            details.requested.name == "kotlin-stdlib-jdk8")) {
+                        details.useVersion(KOTLIN_VERSION)
+                    }
+                }
+            }
         }
     }
 
@@ -343,6 +418,21 @@ class AndroidXImplPlugin : Plugin<Project> {
             }
         }
 
+        // Remove the android:targetSdkVersion element from the manifest used for AARs.
+        project.extensions.getByType<LibraryAndroidComponentsExtension>().onVariants { variant ->
+            project.tasks.register(
+                variant.name + "AarManifestTransformer",
+                AarManifestTransformerTask::class.java
+            ).let { taskProvider ->
+                variant.artifacts.use(taskProvider)
+                    .wiredWithFiles(
+                        AarManifestTransformerTask::aarFile,
+                        AarManifestTransformerTask::updatedAarFile
+                    )
+                    .toTransform(SingleArtifact.AAR)
+            }
+        }
+
         project.extensions.getByType<com.android.build.api.dsl.LibraryExtension>().apply {
             publishing {
                 singleVariant(DEFAULT_PUBLISH_CONFIG)
@@ -353,14 +443,15 @@ class AndroidXImplPlugin : Plugin<Project> {
             beforeVariants(selector().withBuildType("release")) { variant ->
                 variant.enableUnitTest = false
             }
-            onVariants { it.configureLicensePackaging() }
-            finalizeDsl { project.configureAndroidProjectForLint(it.lint, androidXExtension) }
+            onVariants { it.configureTests() }
+            finalizeDsl {
+                project.configureAndroidProjectForLint(it.lint, androidXExtension, isLibrary = true)
+            }
         }
 
         project.configurePublicResourcesStub(libraryExtension)
         project.configureSourceJarForAndroid(libraryExtension)
         project.configureVersionFileWriter(libraryExtension, androidXExtension)
-        project.addCreateLibraryBuildInfoFileTask(androidXExtension)
         project.configureJavaCompilationWarnings(androidXExtension)
 
         project.configureDependencyVerification(androidXExtension) { taskProvider ->
@@ -394,13 +485,31 @@ class AndroidXImplPlugin : Plugin<Project> {
 
     private fun configureWithJavaPlugin(project: Project, extension: AndroidXExtension) {
         project.configureErrorProneForJava()
-        project.configureSourceJarForJava()
 
         // Force Java 1.8 source- and target-compatibility for all Java libraries.
         val javaExtension = project.extensions.getByType<JavaPluginExtension>()
-        javaExtension.apply {
-            sourceCompatibility = VERSION_1_8
-            targetCompatibility = VERSION_1_8
+        project.afterEvaluate {
+            if (extension.type == LibraryType.COMPILER_PLUGIN) {
+                javaExtension.apply {
+                    sourceCompatibility = VERSION_11
+                    targetCompatibility = VERSION_11
+                }
+            } else if (extension.type.compilationTarget == CompilationTarget.HOST &&
+                extension.type != LibraryType.ANNOTATION_PROCESSOR_UTILS
+            ) {
+                javaExtension.apply {
+                    sourceCompatibility = VERSION_17
+                    targetCompatibility = VERSION_17
+                }
+            } else {
+                javaExtension.apply {
+                    sourceCompatibility = VERSION_1_8
+                    targetCompatibility = VERSION_1_8
+                }
+            }
+            if (!project.plugins.hasPlugin(KotlinBasePluginWrapper::class.java)) {
+                project.configureSourceJarForJava()
+            }
         }
 
         project.configureJavaCompilationWarnings(extension)
@@ -413,10 +522,10 @@ class AndroidXImplPlugin : Plugin<Project> {
             }
         }
 
-        project.addCreateLibraryBuildInfoFileTask(extension)
-
         // Standard lint, docs, and Metalava configuration for AndroidX projects.
-        project.configureNonAndroidProjectForLint(extension)
+        if (project.multiplatformExtension == null) {
+            project.configureNonAndroidProjectForLint(extension)
+        }
         val apiTaskConfig = if (project.multiplatformExtension != null) {
             KmpApiTaskConfig
         } else {
@@ -425,7 +534,7 @@ class AndroidXImplPlugin : Plugin<Project> {
         project.configureProjectForApiTasks(apiTaskConfig, extension)
 
         project.afterEvaluate {
-            if (extension.type.publish.shouldRelease()) {
+            if (extension.shouldRelease()) {
                 project.extra.set("publish", true)
             }
         }
@@ -447,7 +556,7 @@ class AndroidXImplPlugin : Plugin<Project> {
             val mavenGroup = extension.mavenGroup
             val isProbablyPublished = extension.type == LibraryType.PUBLISHED_LIBRARY ||
                 extension.type == LibraryType.UNSET
-            if (mavenGroup != null && isProbablyPublished) {
+            if (mavenGroup != null && isProbablyPublished && extension.shouldPublish()) {
                 validateProjectStructure(mavenGroup.group)
             }
         }
@@ -491,15 +600,24 @@ class AndroidXImplPlugin : Plugin<Project> {
         }
 
         compileSdkVersion(COMPILE_SDK_VERSION)
-        buildToolsVersion = BUILD_TOOLS_VERSION
+        buildToolsVersion = SupportConfig.buildToolsVersion(project)
         defaultConfig.targetSdk = TARGET_SDK_VERSION
         ndkVersion = SupportConfig.NDK_VERSION
-        ndkPath = project.getNdkPath().absolutePath
 
         defaultConfig.testInstrumentationRunner = INSTRUMENTATION_RUNNER
 
         testOptions.animationsDisabled = true
         testOptions.unitTests.isReturnDefaultValues = true
+        testOptions.unitTests.all { task ->
+            // https://github.com/robolectric/robolectric/issues/7456
+            task.jvmArgs = listOf(
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+            )
+            // Robolectric 1.7 increased heap size requirements, see b/207169653.
+            task.maxHeapSize = "3g"
+        }
         testOptions.configureVirtualDevices()
 
         // Include resources in Robolectric tests as a workaround for b/184641296 and
@@ -513,7 +631,9 @@ class AndroidXImplPlugin : Plugin<Project> {
             check(minSdkVersion >= DEFAULT_MIN_SDK_VERSION) {
                 "minSdkVersion $minSdkVersion lower than the default of $DEFAULT_MIN_SDK_VERSION"
             }
-            check(compileSdkVersion == COMPILE_SDK_VERSION) {
+            check(compileSdkVersion == COMPILE_SDK_VERSION ||
+                project.isCustomCompileSdkAllowed()
+            ) {
                 "compileSdkVersion must not be explicitly specified, was \"$compileSdkVersion\""
             }
             project.configurations.all { configuration ->
@@ -565,6 +685,7 @@ class AndroidXImplPlugin : Plugin<Project> {
         }
 
         project.configureTestConfigGeneration(this)
+        project.configureFtlRunner()
 
         val buildTestApksTask = project.rootProject.tasks.named(BUILD_TEST_APKS_TASK)
         when (this) {
@@ -576,7 +697,7 @@ class AndroidXImplPlugin : Plugin<Project> {
             buildTestApksTask.configure {
                 it.dependsOn(variant.assembleProvider)
             }
-            variant.configureApkZipping(project, true)
+            variant.configureApkZipping(project)
         }
 
         // AGP warns if we use project.buildDir (or subdirs) for CMake's generated
@@ -584,12 +705,6 @@ class AndroidXImplPlugin : Plugin<Project> {
         // lives alongside the project's buildDir.
         externalNativeBuild.cmake.buildStagingDirectory =
             File(project.buildDir, "../nativeBuildStaging")
-
-        // disable analytics recording
-        // It's always out-of-date, and we don't release any apps in this repo
-        project.tasks.withType(AnalyticsRecordingTask::class.java).configureEach { task ->
-            task.enabled = false
-        }
     }
 
     /**
@@ -597,17 +712,14 @@ class AndroidXImplPlugin : Plugin<Project> {
      */
     @Suppress("DEPRECATION") // ApkVariant
     private fun com.android.build.gradle.api.ApkVariant.configureApkZipping(
-        project: Project,
-        testApk: Boolean
+        project: Project
     ) {
         packageApplicationProvider.get().let { packageTask ->
             AffectedModuleDetector.configureTaskGuard(packageTask)
-            // Skip copying AndroidTest apks if they have no source code (no tests to run).
-            if (!testApk || project.hasAndroidTestSourceCode()) {
-                addToTestZips(project, packageTask)
-                project.addToApkHashDump(packageTask)
-            }
+            addToTestZips(project, packageTask)
         }
+        // This task needs to be guarded by AffectedModuleDetector due to guarding test
+        // APK building above. It can only be removed if we stop using AMD for test APKs.
         project.tasks.withType(ListingFileRedirectTask::class.java).forEach {
             AffectedModuleDetector.configureTaskGuard(it)
         }
@@ -626,14 +738,18 @@ class AndroidXImplPlugin : Plugin<Project> {
 
             config.dependencyConstraints.configureEach { dependencyConstraint ->
                 dependencyConstraint.apply {
-                    // Remove strict constraints on test dependencies and listenablefuture:1.0
-                    if (isTestConfig ||
-                        group == "com.google.guava" &&
-                        name == "listenablefuture" &&
-                        version == "1.0"
-                    ) {
-                        version { versionConstraint ->
-                            versionConstraint.strictly("")
+                    // Clear strict constraints on test dependencies and listenablefuture:1.0
+                    // Don't clear non-strict constraints because they might refer to projects,
+                    // and clearing their versions might be unsupported and unnecessary
+                    if (versionConstraint.strictVersion != "") {
+                        if (isTestConfig ||
+                            (group == "com.google.guava" &&
+                            name == "listenablefuture" &&
+                            version == "1.0")
+                        ) {
+                            version { versionConstraint ->
+                                versionConstraint.strictly("")
+                            }
                         }
                     }
                 }
@@ -641,7 +757,7 @@ class AndroidXImplPlugin : Plugin<Project> {
         }
 
         project.afterEvaluate {
-            if (androidXExtension.publish.shouldRelease()) {
+            if (androidXExtension.shouldRelease()) {
                 project.extra.set("publish", true)
             }
         }
@@ -653,6 +769,64 @@ class AndroidXImplPlugin : Plugin<Project> {
             .manifest.srcFile("src/androidAndroidTest/AndroidManifest.xml")
     }
 
+    /**
+     * Sets the konan distribution url to the prebuilts directory.
+     */
+    private fun Project.configureKonanDirectory() {
+        if (ProjectLayoutType.isPlayground(this)) {
+            return // playground does not use prebuilts
+        }
+        overrideKotlinNativeDistributionUrlToLocalDirectory()
+        overrideKotlinNativeDependenciesUrlToLocalDirectory()
+    }
+
+    private fun Project.overrideKotlinNativeDependenciesUrlToLocalDirectory() {
+        val konanPrebuiltsFolder = getKonanPrebuiltsFolder()
+        // use relative path so it doesn't affect gradle remote cache.
+        val relativeRootPath = konanPrebuiltsFolder.relativeTo(rootProject.projectDir).path
+        val relativeProjectPath = konanPrebuiltsFolder.relativeTo(projectDir).path
+        tasks.withType(KotlinNativeCompile::class.java).configureEach {
+            it.kotlinOptions.freeCompilerArgs += listOf(
+                "-Xoverride-konan-properties=dependenciesUrl=file:$relativeRootPath"
+            )
+        }
+        tasks.withType(CInteropProcess::class.java).configureEach {
+            it.settings.extraOpts += listOf(
+                "-Xoverride-konan-properties",
+                "dependenciesUrl=file:$relativeProjectPath"
+            )
+        }
+    }
+
+    private fun Project.overrideKotlinNativeDistributionUrlToLocalDirectory() {
+        val relativePath = getKonanPrebuiltsFolder()
+            .resolve("nativeCompilerPrebuilts")
+            .relativeTo(projectDir)
+            .path
+        val url = "file:$relativePath"
+        extensions.extraProperties["kotlin.native.distribution.baseDownloadUrl"] = url
+    }
+
+    private fun Project.configureKmpTests() {
+        val kmpExtension = checkNotNull(
+            project.extensions.findByType<KotlinMultiplatformExtension>()
+        ) {
+            """
+            Project ${project.path} applies kotlin multiplatform plugin but we cannot find the
+            KotlinMultiplatformExtension.
+            """.trimIndent()
+        }
+        kmpExtension.testableTargets.all { kotlinTarget ->
+            if (kotlinTarget is KotlinNativeTargetWithSimulatorTests) {
+                kotlinTarget.binaries.all {
+                    // Use std allocator to avoid the following warning:
+                    // w: Mimalloc allocator isn't supported on target <target>. Used standard mode.
+                    it.freeCompilerArgs += "-Xallocator=std"
+                }
+            }
+        }
+    }
+
     private fun AppExtension.configureAndroidApplicationOptions(project: Project) {
         defaultConfig.apply {
             versionCode = 1
@@ -660,6 +834,7 @@ class AndroidXImplPlugin : Plugin<Project> {
         }
 
         project.addAppApkToTestConfigGeneration()
+        project.addAppApkToFtlRunner()
 
         val buildTestApksTask = project.rootProject.tasks.named(BUILD_TEST_APKS_TASK)
         applicationVariants.all { variant ->
@@ -669,7 +844,7 @@ class AndroidXImplPlugin : Plugin<Project> {
                     it.dependsOn(variant.assembleProvider)
                 }
             }
-            variant.configureApkZipping(project, false)
+            variant.configureApkZipping(project)
         }
     }
 
@@ -681,49 +856,139 @@ class AndroidXImplPlugin : Plugin<Project> {
             if (extension.type != LibraryType.SAMPLES) {
                 val verifyDependencyVersionsTask = project.createVerifyDependencyVersionsTask()
                 if (verifyDependencyVersionsTask != null) {
-                    project.createCheckReleaseReadyTask(listOf(verifyDependencyVersionsTask))
                     taskConfigurator(verifyDependencyVersionsTask)
                 }
             }
         }
     }
 
-    // Task that creates a json file of a project's dependencies
-    private fun Project.addCreateLibraryBuildInfoFileTask(extension: AndroidXExtension) {
-        afterEvaluate {
-            if (extension.publish.shouldRelease()) {
-                // Only generate build info files for published libraries.
-                val task = CreateLibraryBuildInfoFileTask.setup(project, extension)
+    // If this project wants other project in the same group to have the same version,
+    // this function configures those constraints.
+    private fun Project.configureConstraintsWithinGroup(
+        extension: AndroidXExtension
+    ) {
+        if (!project.shouldAddGroupConstraints().get()) {
+            return
+        }
+        project.afterEvaluate {
+            if (project.hasKotlinNativeTarget().get()) {
+                // KMP plugin cannot handle constraints properly for native targets
+                // b/274786186, YT: KT-57531
+                // It is expected to be fixed in Kotlin 1.9 after which, we should remove this check
+                return@afterEvaluate
+            }
 
-                rootProject.tasks.named(CreateLibraryBuildInfoFileTask.TASK_NAME).configure {
-                    it.dependsOn(task)
+            // make sure that the project has a group
+            val projectGroup = extension.mavenGroup
+            if (projectGroup == null)
+                return@afterEvaluate
+            // make sure that this group is configured to use a single version
+            val requiredVersion = projectGroup.atomicGroupVersion
+            if (requiredVersion == null)
+                return@afterEvaluate
+
+            // We don't want to emit the same constraint into our .module file more than once,
+            // and we don't want to try to apply a constraint to a configuration that doesn't accept them,
+            // so we create a configuration to hold the constraints and make each other constraint extend it
+            val constraintConfiguration = project.configurations.create("groupConstraints")
+            project.configurations.configureEach { configuration ->
+                if (configuration != constraintConfiguration)
+                    configuration.extendsFrom(constraintConfiguration)
+            }
+
+            val otherProjectsInSameGroup = extension.getOtherProjectsInSameGroup()
+            val constraints = project.dependencies.constraints
+            val allProjectsExist = buildContainsAllStandardProjects()
+            for (otherProject in otherProjectsInSameGroup) {
+	        val otherGradlePath = otherProject.gradlePath
+                if (otherGradlePath == ":compose:ui:ui-android-stubs") {
+                    // exemption for library that doesn't truly get published: b/168127161
+                    continue
                 }
-                addTaskToAggregateBuildInfoFileTask(task)
+                // We only enable constraints for builds that we intend to be able to publish from.
+                //   If a project isn't included in a build we intend to be able to publish from,
+                //   the project isn't going to be published.
+                // Sometimes this can happen when a project subset is enabled:
+                //   The KMP project subset enabled by androidx_multiplatform_mac.sh contains
+                //   :benchmark:benchmark-common but not :benchmark:benchmark-benchmark
+                //   This is ok because we don't intend to publish that artifact from that build
+                val otherProjectShouldExist =
+                    allProjectsExist || findProject(otherGradlePath) != null
+                if (!otherProjectShouldExist) {
+                    continue
+                }
+                // We only emit constraints referring to projects that will release
+                val otherFilepath = File(otherProject.filePath, "build.gradle")
+                val parsed = parseBuildFile(otherFilepath)
+                if (!parsed.shouldRelease()) {
+                    continue
+                }
+                if (parsed.libraryType == LibraryType.SAMPLES) {
+                    // a SAMPLES project knows how to publish, but we don't intend to actually
+                    // publish it
+                    continue
+                }
+                // Under certain circumstances, a project is allowed to override its
+                // version see ( isGroupVersionOverrideAllowed ), in which case it's
+                // not participating in the versioning policy yet and we don't emit
+                // version constraints referencing it
+                if (parsed.specifiesVersion) {
+                    continue
+                }
+                val dependencyConstraint = project(otherGradlePath)
+                constraints.add(
+                    constraintConfiguration.name,
+                    dependencyConstraint
+                )
+            }
+
+            // disallow duplicate constraints
+            project.configurations.all { config ->
+                // find all constraints contributed by this Configuration and its ancestors
+                val configurationConstraints: MutableSet<String> = mutableSetOf()
+                config.hierarchy.forEach { parentConfig ->
+                    parentConfig.dependencyConstraints.configureEach { dependencyConstraint ->
+                        dependencyConstraint.apply {
+                            if (
+                                versionConstraint.requiredVersion != "" &&
+                                versionConstraint.requiredVersion != "unspecified"
+                            ) {
+                                val key =
+                                    "${dependencyConstraint.group}:${dependencyConstraint.name}"
+                                if (configurationConstraints.contains(key)) {
+                                    throw GradleException(
+                                        "Constraint on $key was added multiple times in " +
+                                        "$config (version = " +
+                                        "${versionConstraint.requiredVersion}).\n\n" +
+                                        "This is unnecessary and can also trigger " +
+                                        "https://github.com/gradle/gradle/issues/24037 in " +
+                                        "builds trying to use the resulting artifacts.")
+                                }
+                                configurationConstraints.add(key)
+                            }
+                        }
+                    }
+                }
             }
         }
     }
 
-    private fun Project.addTaskToAggregateBuildInfoFileTask(
-        task: TaskProvider<CreateLibraryBuildInfoFileTask>
-    ) {
-        rootProject.tasks.named(CREATE_AGGREGATE_BUILD_INFO_FILES_TASK).configure {
-            val aggregateLibraryBuildInfoFileTask: CreateAggregateLibraryBuildInfoFileTask = it
-                as CreateAggregateLibraryBuildInfoFileTask
-            aggregateLibraryBuildInfoFileTask.dependsOn(task)
-            aggregateLibraryBuildInfoFileTask.libraryBuildInfoFiles.add(
-                task.flatMap { task -> task.outputFile }
-            )
-        }
+    /**
+     * Tells whether this build contains the usual set of all projects (`./gradlew projects`)
+     * Sometimes developers request to include fewer projects because this may run more quickly
+     */
+    private fun Project.buildContainsAllStandardProjects(): Boolean {
+        if (getProjectSubset() != null)
+            return false
+        if (ProjectLayoutType.isPlayground(this))
+            return false
+        return true
     }
 
     companion object {
-        const val APK_HASH_DUMP = "apkHashDump"
         const val BUILD_TEST_APKS_TASK = "buildTestApks"
-        const val CHECK_RELEASE_READY_TASK = "checkReleaseReady"
         const val CREATE_LIBRARY_BUILD_INFO_FILES_TASK = "createLibraryBuildInfoFiles"
-        const val CREATE_AGGREGATE_BUILD_INFO_FILES_TASK = "createAggregateBuildInfoFiles"
         const val GENERATE_TEST_CONFIGURATION_TASK = "GenerateTestConfiguration"
-        const val REPORT_LIBRARY_METRICS_TASK = "reportLibraryMetrics"
         const val ZIP_TEST_CONFIGS_WITH_APKS_TASK = "zipTestConfigsWithApks"
         const val ZIP_CONSTRAINED_TEST_CONFIGS_WITH_APKS_TASK = "zipConstrainedTestConfigsWithApks"
 
@@ -759,7 +1024,7 @@ private fun Project.hideJavadocTask() {
 private fun Project.addToProjectMap(extension: AndroidXExtension) {
     // TODO(alanv): Move this out of afterEvaluate
     afterEvaluate {
-        if (extension.publish.shouldRelease()) {
+        if (extension.shouldRelease()) {
             val group = extension.mavenGroup?.group
             if (group != null) {
                 val module = "$group:$name"
@@ -781,18 +1046,6 @@ private fun Project.addToProjectMap(extension: AndroidXExtension) {
 
 val Project.multiplatformExtension
     get() = extensions.findByType(KotlinMultiplatformExtension::class.java)
-
-/**
- * Creates the [CHECK_RELEASE_READY_TASK], which aggregates tasks that must pass for a
- * project to be considered ready for public release.
- */
-private fun Project.createCheckReleaseReadyTask(taskProviderList: List<TaskProvider<out Task>>) {
-    tasks.register(CHECK_RELEASE_READY_TASK) {
-        for (taskProvider in taskProviderList) {
-            it.dependsOn(taskProvider)
-        }
-    }
-}
 
 @Suppress("UNCHECKED_CAST")
 fun Project.getProjectsMap(): ConcurrentHashMap<String, String> {
@@ -817,50 +1070,24 @@ private fun Project.configureTaskTimeouts() {
 private fun Project.configureJavaCompilationWarnings(androidXExtension: AndroidXExtension) {
     afterEvaluate {
         project.tasks.withType(JavaCompile::class.java).configureEach { task ->
-            if (hasProperty(ALL_WARNINGS_AS_ERRORS)) {
-                // If we're running a hypothetical test build confirming that tip-of-tree versions
-                // are compatible, then we're not concerned about warnings
-                if (!project.usingMaxDepVersions()) {
-                    task.options.compilerArgs.add("-Werror")
-                    task.options.compilerArgs.add("-Xlint:unchecked")
-                    if (androidXExtension.failOnDeprecationWarnings) {
-                        task.options.compilerArgs.add("-Xlint:deprecation")
-                    }
+            // If we're running a hypothetical test build confirming that tip-of-tree versions
+            // are compatible, then we're not concerned about warnings
+            if (!project.usingMaxDepVersions()) {
+                task.options.compilerArgs.add("-Xlint:unchecked")
+                if (androidXExtension.failOnDeprecationWarnings) {
+                    task.options.compilerArgs.add("-Xlint:deprecation")
                 }
             }
         }
     }
 }
 
-private fun Project.configureJavaCompilationWarnings(task: KotlinCompile) {
-    if (hasProperty(ALL_WARNINGS_AS_ERRORS) &&
-        !project.usingMaxDepVersions()
-    ) {
-        task.kotlinOptions.allWarningsAsErrors = true
-    }
-    task.kotlinOptions.freeCompilerArgs += listOf(
-        "-Xskip-metadata-version-check"
-    )
-}
-
 /**
  * Guarantees unique names for the APKs, and modifies some of the suffixes. The APK name is used
  * to determine what gets run by our test runner
  */
-fun String.renameApkForTesting(projectPath: String, hasBenchmarkPlugin: Boolean): String {
-    val name =
-        if (projectPath.contains("media") && projectPath.contains("version-compat-tests")) {
-            // Exclude media*:version-compat-tests modules from
-            // existing support library presubmit tests.
-            this.replace("-debug-androidTest", "")
-        } else if (hasBenchmarkPlugin) {
-            this.replace("-androidTest", "-androidBenchmark")
-        } else if (projectPath.endsWith("macrobenchmark")) {
-            this.replace("-androidTest", "-androidMacrobenchmark")
-        } else {
-            this
-        }
-    return "${projectPath.asFilenamePrefix()}_$name"
+fun String.renameApkForTesting(projectPath: String): String {
+    return "${projectPath.asFilenamePrefix()}_$this"
 }
 
 fun Project.hasBenchmarkPlugin(): Boolean {
@@ -956,11 +1183,52 @@ fun Project.validateProjectStructure(groupId: String) {
     // Project directory should match the Maven coordinate.
     val expectDir = shortGroupId.replace(".", File.separator) +
         "${File.separator}${project.name}"
-    val actualDir = project.projectDir.toRelativeString(project.getSupportRootFolder())
+    // Canonical projectDir is needed because sometimes, at least in tests, on OSX, supportRoot
+    // starts with /var, and projectDir starts with /private/var (which are the same thing)
+    val canonicalProjectDir = project.projectDir.canonicalFile
+    val actualDir =
+        canonicalProjectDir.toRelativeString(project.getSupportRootFolder().canonicalFile)
     if (expectDir != actualDir) {
         throw GradleException(
             "Invalid project structure! Expected $expectDir as project directory, found $actualDir"
         )
+    }
+}
+
+fun Project.validateMultiplatformPluginHasNotBeenApplied() {
+    if (plugins.hasPlugin(KotlinMultiplatformPluginWrapper::class.java)) {
+        throw GradleException(
+            "The Kotlin multiplatform plugin should only be applied by the AndroidX plugin."
+        )
+    }
+}
+
+/**
+ * Verifies that ProjectParser computes the correct values for this project
+ */
+fun Project.validateProjectParser(extension: AndroidXExtension) {
+    project.afterEvaluate {
+        val parsed = project.parse()
+        check(extension.type == parsed.libraryType) {
+            "ProjectParser incorrectly computed libraryType = ${parsed.libraryType} " +
+                "instead of ${extension.type}"
+        }
+        check(extension.publish == parsed.publish) {
+            "ProjectParser incorrectly computed publish = ${parsed.publish} " +
+                "instead of ${extension.publish}"
+        }
+        check(extension.shouldPublish() == parsed.shouldPublish()) {
+            "ProjectParser incorrectly computed shouldPublish() = ${parsed.shouldPublish()} " +
+                "instead of ${extension.shouldPublish()}"
+        }
+        check(extension.shouldRelease() == parsed.shouldRelease()) {
+            "ProjectParser incorrectly computed shouldRelease() = ${parsed.shouldRelease()} " +
+                "instead of ${extension.shouldRelease()}"
+        }
+        check(extension.projectDirectlySpecifiesMavenVersion == parsed.specifiesVersion) {
+            "ProjectParser incorrectly computed specifiesVersion = ${parsed.specifiesVersion}" +
+                "instead of ${extension.projectDirectlySpecifiesMavenVersion}"
+        }
     }
 }
 
@@ -985,5 +1253,13 @@ fun AndroidXExtension.validateMavenVersion() {
         )
     }
 }
+
+/**
+ * Removes the line and column attributes from the [baseline].
+ */
+fun removeLineAndColumnAttributes(baseline: String): String = baseline.replace(
+    "\\s*(line|column)=\"\\d+?\"".toRegex(),
+    ""
+)
 
 const val PROJECT_OR_ARTIFACT_EXT_NAME = "projectOrArtifact"
